# ratesreader

./: LICENSE.txt  README.md  pyproject.toml  setup.py
ratesreader/: ratesreader.py
